# provekit

./: .gitignore  BENCHMARK.md  Cargo.toml
noir-examples/noir-passport-examples/passport_validity_check/: Nargo.toml
noir-examples/noir-passport-examples/passport_validity_check/src/: lib.nr
noir-examples/noir-passport-examples/zkpassport_libs/compare/age/: Nargo.toml
noir-examples/noir-passport-examples/zkpassport_libs/compare/age/src/: lib.nr
noir-examples/noir-passport-examples/zkpassport_libs/compare/date/: Nargo.toml
noir-examples/noir-passport-examples/zkpassport_libs/data-check/integrity/: Nargo.toml
noir-examples/noir-passport-examples/zkpassport_libs/data-check/integrity/src/: lib.nr
noir-examples/noir-passport-examples/zkpassport_libs/sig-check/common/: Nargo.toml
noir-examples/noir-passport-examples/zkpassport_libs/sig-check/common/src/: lib.nr
noir-examples/noir_sha256/: Nargo.toml
noir-examples/noir_sha256/src/: main.nr
noir-examples/x-handle-verification/: Nargo.toml  Prover.toml  README.md  clean.sh  compile.sh
noir-examples/x-handle-verification/src/: main.nr  sender_domain_regex.nr  x_handle_regex.nr
provekit/common/: Cargo.toml
provekit/common/src/: lib.rs  noir_proof_scheme.rs  whir_r1cs.rs
provekit/common/src/dummy/: pow.rs  whir.rs
provekit/common/src/hash/: mod.rs  pow_leading_zeros.rs
provekit/common/src/hash/blake3/: mod.rs  pow.rs  sponge.rs  whir.rs
provekit/common/src/hash/dummy/: mod.rs  pow.rs  sponge.rs  whir.rs
provekit/common/src/hash/keccak256/: mod.rs  pow.rs  sponge.rs  whir.rs
provekit/common/src/hash/poseidon/: mod.rs  pow.rs  sponge.rs  whir.rs
provekit/common/src/hash/sha256/: pow.rs  sponge.rs  whir.rs
provekit/common/src/hash/skyscraper/: mod.rs  pow.rs  sponge.rs  whir.rs
provekit/common/src/sha256/: mod.rs  pow.rs  sponge.rs  whir.rs
provekit/common/src/utils/: mod.rs
provekit/common/src/witness/: layer_scheduler.rs  mod.rs  witness_builder.rs
provekit/prover/: Cargo.toml
provekit/prover/src/: noir_proof_scheme.rs  r1cs.rs  whir_r1cs.rs
provekit/prover/src/witness/: witness_builder.rs
provekit/r1cs-compiler/src/: binops.rs  lib.rs  noir_proof_scheme.rs  noir_to_r1cs.rs  poseidon2_permutation.rs  sha256_compression.rs
provekit/verifier/: Cargo.toml
provekit/verifier/src/: whir_r1cs.rs
scripts/: benchmark_hash.sh
tooling/cli/: Cargo.toml
