[package]
name = "provekit-prover"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["hash-skyscraper"]
hash-dummy = ["provekit-common/hash-dummy"]
hash-sha256 = ["provekit-common/hash-sha256"]
hash-keccak256 = ["provekit-common/hash-keccak256"]
hash-blake3 = ["provekit-common/hash-blake3"]
hash-poseidon = ["provekit-common/hash-poseidon"]
hash-skyscraper = ["provekit-common/hash-skyscraper"]

[dependencies]
# Workspace crates
provekit-common = { workspace = true, default-features = false }
skyscraper.workspace = true

# Noir language
acir.workspace = true
bn254_blackbox_solver.workspace = true
nargo.workspace = true
noir_artifact_cli.workspace = true
noirc_abi.workspace = true

# Cryptography and proof systems
ark-ff.workspace = true
ark-std.workspace = true
spongefish.workspace = true
whir.workspace = true

# 3rd party
anyhow.workspace = true
rand.workspace = true
rayon.workspace = true
tracing.workspace = true

[lints]
workspace = true
