[package]
name = "provekit-verifier"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["hash-skyscraper"]
hash-dummy = ["provekit-common/hash-dummy"]
hash-sha256 = ["provekit-common/hash-sha256"]
hash-keccak256 = ["provekit-common/hash-keccak256"]
hash-skyscraper = ["provekit-common/hash-skyscraper"]

[dependencies]
# Workspace crates
provekit-common = { workspace = true, default-features = false }

# Cryptography and proof systems
ark-std.workspace = true
spongefish.workspace = true
whir.workspace = true

# 3rd party
anyhow.workspace = true
tracing.workspace = true

[lints]
workspace = true
