[package]
name = "provekit-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Workspace crates
provekit-common = { workspace = true, default-features = false }
provekit-gnark.workspace = true
provekit-prover = { workspace = true, default-features = false }
provekit-r1cs-compiler.workspace = true
provekit-verifier = { workspace = true, default-features = false }

# Noir language
acir.workspace = true

# 3rd party
anyhow.workspace = true
argh.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tracy = { workspace = true, optional = true, features = ["default", "sampling","manual-lifetime"] }

[lints]
workspace = true

[features]
default = ["profiling-allocator", "hash-skyscraper"]
profiling-allocator = []
tracy = ["dep:tracing-tracy"]
hash-dummy = ["provekit-common/hash-dummy", "provekit-prover/hash-dummy", "provekit-verifier/hash-dummy"]
hash-sha256 = ["provekit-common/hash-sha256", "provekit-prover/hash-sha256", "provekit-verifier/hash-sha256"]
hash-skyscraper = ["provekit-common/hash-skyscraper", "provekit-prover/hash-skyscraper", "provekit-verifier/hash-skyscraper"]